--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.8.0",
+    "css-loader": "^0.23.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
   },
   "devDependencies": {
