--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/webpack-dev-server --progress --colors"
+    "start-webpack-server": "node_modules/.bin/webpack-dev-server --content-base public --progress --colors",
+    "build": "node_modules/.bin/webpack && cp build/Release/* public && cp src/index.html public",
+    "start": "npm run build && node src/node_server.js"
   },
   "author": "pl",
   "license": "ISC",
@@ -16,7 +18,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.8.0",
+    "cors": "^2.7.1",
     "css-loader": "^0.23.1",
+    "express": "^4.13.4",
+    "node-mysql": "^0.4.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "style-loader": "^0.13.1",
