--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cors": "^2.7.1",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
-    "node-mysql": "^0.4.2",
+    "mysql": "^2.10.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "style-loader": "^0.13.1",
